examples/git-mkdocs/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/name: docs
  name: docs
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/name: docs
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/name: docs
  name: docs-webhook
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: webhook
  selector:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/name: docs
  type: ClusterIP
